<resources>
    <string name="app_name">Mobilalkfejl_vernyomasapp</string>
    <string name="app_canonical_name">Vérnyomásnapló app</string>
    <string name="email_address">E-mail cím</string>
    <string name="password">Jelszó</string>
    <string name="login_button_text">Bejelentkezés</string>
    <string name="register_button_text">Regisztráció</string>
    <string name="SYS">SYS</string>
    <string name="DIA">DIA</string>
    <string name="PULSE">PULSE</string>
    <string name="meres_torles">Törlés</string>
    <string name="meres_modositas">Módosítás</string>
    <string name="MeresBevitel_title">Új mérés</string>
    <string name="meres_bevitel">Bevitel</string>
    <string name="MeresModositas_title">Módosítás</string>
    <string name="MeresTorles_title">Mérés törlésének megerősítése</string>
    <string name="MeresTorles_message">Biztosan törölni szeretné a mérést?</string>
    <string name="POSITIVE_ANS">Igen</string>
    <string name="NEGATIVE_ANS">Nem</string>

    <string-array name="SYS">
        <item>128</item>
        <item>140</item>
        <item>133</item>
        <item>152</item>
        <item>112</item>
        <item>132</item>
    </string-array>

    <string-array name="DIA">
        <item>88</item>
        <item>80</item>
        <item>100</item>
        <item>60</item>
        <item>76</item>
        <item>89</item>
    </string-array>

    <string-array name="PULSE">
        <item>88</item>
        <item>80</item>
        <item>75</item>
        <item>60</item>
        <item>76</item>
        <item>89</item>
    </string-array>
</resources>